testsuite/poke.pkl/string-diag-2.pk
/* { dg-do compile } */

/* Due to a lexer bug, this was a valid string */

var s = "\\" foo"; /* { dg-error "" } */
